--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,3 +1,7 @@
 .app {
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
