--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-.app {
+body {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  margin: 0;
+  font-family: 'Inter';
+  background: #00ffc2;
+  background-image: linear-gradient(-50deg, #000000, #003c2d, #00ffc2);
+}
+
+.app {
+  min-height: 100vh;
 }
