--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   min-height: 100vh;
   margin: 0;
