--- a/packages/client/src/components/NewArrivalsCarousel/styles.css
+++ b/packages/client/src/components/NewArrivalsCarousel/styles.css
@@ -42,14 +42,18 @@ div.slick-track {
 }
 
 @media (max-width: 1440px) {
+  div.slick-active {
+    width: 850px !important;
+  }
+
   .slick-active > div > a > div {
     height: 28rem;
   }
 
   ul.slick-dots {
-    bottom: -3.5rem;
+    margin: 1.25rem 0;
   }
   .slick-dots li {
-    margin: 2rem 0.5rem;
+    margin: 1rem 0.5rem;
   }
 }
